TestCases/Errors/range_value/observations/sum_11_obs.spm
 obs   7-16   0.0263636363636364 
 obs   6-17   0.0530434782608696 
 obs   7-17   0.032895256916996 
 obs   8-17   0.0159683794466403 
 obs   7-18   0.0236363636363636 
 obs   8-18   0.023830855135203 
 error_value   7-16   0 
 error_value   6-17   0 
 error_value   7-17   0 
 error_value   8-17   0 
 error_value   7-18   0 
 error_value   8-18   0 
